# openapi.yaml
@@ -2,11 +2,11 @@ openapi: 3.0.0
 info:
   title: ReviewRoom
   description: "Server for Reviewroom mobile app"
-  version: 0.2.0
+  version: 0.2.1
     
 tags:
   - name: login
-    description: "Все связанное с авторизацией и пользоваетелем"
+    description: "Все связанное с авторизацией"
     
   - name: movie
     description: "Все связанное с фильмами"
@@ -62,7 +62,7 @@ paths:
     post:
       tags:
         - movie
-      summary: "Создает комментарий (отзыв) к фильму"
+      summary: "Создает отзыв к фильму"
       parameters:
         - name: id
           in: path
@@ -148,11 +148,21 @@ paths:
     get:
       tags:
         - collection
+      summary: "Получить список коллекций"
       security:
       - bearerAuth: [] 
+      parameters:
+        - name: filter
+          in: query
+          required: true
+          description: "Данное значение определяет тип возвращаемых коллекций: top возвращает 'популярные' коллекции, user возвращает коллекции пользователя"
+          schema:
+            type: string
+            enum: ["top", "user"]
+            default: "top"
       responses:
         '200':
-          description: "Возвращает список коллекций пользователя"
+          description: "Возвращает список коллекций"
           content:
             application/json:
               schema:
@@ -164,6 +174,7 @@ paths:
     get:
       tags:
         - collection
+      summary: "Получить информацию о коллекции"
       security:
       - bearerAuth: [] 
       parameters:
@@ -185,6 +196,7 @@ paths:
     post:
       tags:
         - collection
+      summary: "Создать коллекцию с переданными параметрами"
       security:
       - bearerAuth: [] 
       requestBody:
@@ -209,7 +221,7 @@ components:
           format: float64
         name:
           type: string
-        posterUrl:
+        poster_url:
           type: string
     
     Comment:
@@ -224,10 +236,10 @@ components:
     TokenPair:
       type: object
       properties:
-        accessToken:
+        access_token:
           type: string
           format: jwt
-        refreshToken:
+        refresh_token:
           type: string
           format: jwt
     
@@ -235,6 +247,9 @@ components:
       type: object
       properties:
         id:
+          type: number
+          format: float64
+        author_id:
           type: number
           format: float64
         movies:
